# swewaia_so-challange

./: README.md  pyproject.toml
diary/: 001-project-setup.md  002-requirements-spec.md  003-data-fetcher-tests.md  004-implement-data-fetcher.md  005-implement-plotter-and-milestones.md
docs/: requirements.md
so_challenge/: __init__.py  data_fetcher.py  milestones.py  plotter.py
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
