[project]
name = "so-challenge"
version = "0.1.0"
description = "Scaffold for data collection and visualization around milestone tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "pandas",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
